--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+
+
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#3772E7</color>
+    <color name="black_custom">#1A1B22</color>
+    <color name="black_system">#000000</color>
+    <color name="items_settings">#AEAFB4</color>
+    <color name="background_settings">#FFFFFFFF</color>
+    <color name="track">#E6E8EB</color>
+    <color name="header_content_settings">#1A1B22</color>
+    <color name="content_settings_text">#000000</color>
 </resources>
