--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.PlaylistMaker2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:background">@color/background</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="iconTint">@color/black_custom</item>
+        <item name="colorPrimary">@color/background</item>
     </style>
+
+    <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
 
     <style name="Theme.PlaylistMaker2" parent="Base.Theme.PlaylistMaker2" />
 </resources>
