--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,13 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.PlaylistMaker2" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:colorBackground">@color/background</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="iconTint">@color/black_custom</item>
-        <item name="colorPrimary">@color/background</item>
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-
-
+<resources>
+    <style name="Theme.PlaylistMaker2" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/activity_background</item>
+        <item name="colorOnPrimary">@color/content_settings_text</item>
+        <item name="colorSecondary">@color/activity_main_background</item>
     </style>
+
 </resources>
