--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/activity_main_background"
+    tools:context=".MainActivity"
         >
     <LinearLayout
         android:layout_width="match_parent"
