--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,4 +10,6 @@
     <color name="items_settings">#FFFFFFFF</color>
     <color name="activity_background">#1A1B22</color>
     <color name="thumb_tint">#3772E7</color>
+    <color name="search_hint">#1A1B22</color>
+    <color name="searching_background">#FFFFFFFF</color>
 </resources>
