--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,6 +55,23 @@
         <item name="android:background">@android:color/transparent</item>
 
     </style>
-
+    <style name="BackButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:elevation">0dp</item>
+        <item name="android:layout_width">@dimen/header_buttons_weight</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:contentDescription">@string/empty_button</item>
+        <item name="icon">@drawable/arrow_back</item>
+        <item name="iconTint">@color/header_content_settings</item>
+        
+    </style>
+    <style name="HeaderTextStyle">
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/main_manu_button_size</item>
+        <item name="android:textColor">@color/header_content_settings</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
 
 </resources>
