SearchActivity Добавлено сохранение EditText; activity_search.xml зменён цвет вводимого текста

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -59,6 +59,7 @@
             android:drawableStart="@drawable/search"
             android:drawableTint="@color/search_hint"
             android:drawablePadding="16dp"
+            android:textColor="@color/black_custom"
             android:textColorHint="@color/search_hint"
             android:textSize="@dimen/content_settings_text"
             android:fontFamily="@font/ys_display_regular"
