--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="start"
             tools:ignore="TouchTargetSizeCheck"
             style="@style/BackButtonStyle"
+
             >
         </Button>
         <TextView
@@ -30,64 +31,62 @@
             />
 
     </LinearLayout>
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:background="@color/searching_background"
-        android:orientation="horizontal"
-
-
-
+        android:background="@drawable/corners_search"
         >
+
         <EditText
 
             android:id="@+id/searching"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginStart="12dp"
-            android:hint="@string/search"
-            android:importantForAutofill="no"
-            android:minHeight="48dp"
-            android:maxLines="1"
-            android:inputType="text"
             android:background="@android:color/transparent"
-            android:drawableStart="@drawable/search"
+            android:drawableStart="@drawable/search_hint"
+            android:drawablePadding="8dp"
             android:drawableTint="@color/search_hint"
-            android:drawablePadding="16dp"
+            android:focusable="true"
+            android:fontFamily="@font/ys_display_regular"
+            android:hint="@string/search"
+            android:minHeight="36dp"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:maxLines="1"
             android:textColor="@color/black_custom"
             android:textColorHint="@color/search_hint"
-            android:textSize="@dimen/content_settings_text"
             android:textFontWeight="400"
-            android:fontFamily="@font/ys_display_regular"
-            android:focusable="true"
-            tools:ignore="VisualLintTextFieldSize" />
+            android:textSize="@dimen/content_settings_text"
+            tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck" />
 
         <FrameLayout
             android:id="@+id/clear_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
             android:clickable="true"
-            android:padding="12dp"
             android:visibility="gone"
-            tools:ignore="SpeakableTextPresentCheck"
-            >
+            android:padding="12dp"
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
 
             <ImageView
                 android:id="@+id/icon_clear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="2dp"
+                android:layout_marginStart="2dp"
                 android:layout_gravity="center"
                 android:src="@drawable/clear_icon"
                 app:tint="@color/search_hint" />
         </FrameLayout>
 
-    </LinearLayout>
+    </FrameLayout>
 
 
 </LinearLayout>
