--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,6 +74,17 @@
         <item name="android:textFontWeight">500</item>
     </style>
 
+    <style name="SearchErrorTextStyle">
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/header_content_settings</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:gravity">center</item>
+    </style>
 
+    <style name="ReloadButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+
+    </style>
 
 </resources>
