--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -8,10 +8,11 @@
     app:cardElevation="0dp"
     app:cardCornerRadius="0dp"
     android:id="@+id/trackCard"
-    android:backgroundTint="@android:color/transparent">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:backgroundTint="@android:color/transparent"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,8 +26,9 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="13dp"/>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="14dp"
                 android:orientation="vertical">
@@ -47,19 +49,21 @@
                     >
                     <TextView
                         android:id="@+id/trackCardNameArtist"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
                         android:maxLines="1"
                         android:fontFamily="@font/ys_display_regular"
                         android:textSize="11sp"
-                        android:ellipsize="end"
+                        android:layout_gravity="start"
+                        android:gravity="start"
                         tools:text="The Bittles"
                         android:textColor="@color/items_settings"/>
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:src="@drawable/dot"
+                        android:gravity="start"
+                        android:layout_gravity="start"
                         app:tint="@color/items_settings"
                         />
                     <TextView
@@ -69,35 +73,37 @@
                         android:fontFamily="@font/ys_display_regular"
                         android:textSize="11sp"
                         android:maxLines="1"
+                        android:gravity="start"
+                        android:layout_gravity="start"
                         tools:text="2:55"
                         android:textColor="@color/items_settings"/>
                 </LinearLayout>
 
             </LinearLayout>
+            <FrameLayout
+                android:id="@+id/trackCardArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="12dp"
+
+                android:clickable="true"
+                android:focusable="true"
+                android:minWidth="24dp"
+                android:minHeight="24dp"
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:src="@drawable/arrow_forward"
+                    app:tint="@color/items_settings" />
+            </FrameLayout>
 
         </LinearLayout>
 
-        <FrameLayout
-            android:id="@+id/trackCardArrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="12dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:minWidth="24dp"
-            android:minHeight="24dp"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/arrow_forward"
-                app:tint="@color/items_settings" />
-        </FrameLayout>
-    </FrameLayout>
 
     
 </androidx.cardview.widget.CardView>
