--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -56,6 +56,7 @@
                         android:textSize="11sp"
                         android:layout_gravity="start"
                         android:gravity="start"
+                        android:ellipsize="end"
                         tools:text="The Bittles"
                         android:textColor="@color/items_settings"/>
                     <ImageView
