--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -146,18 +146,51 @@
             android:paddingVertical="6dp"
             android:paddingStart="8dp"
             android:paddingEnd="6dp"
-            android:layout_gravity="center"
             android:layout_marginTop="24dp"
-            android:elevation="0dp"
-            android:backgroundTint="@color/header_content_settings"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            app:cornerRadius="54dp"
+            style="@style/SearchButtonStyle"
             android:text="@string/reload_button"
-            android:textFontWeight="500"
-            android:textSize="14sp"
-            android:fontFamily="@font/ys_display_medium"
-            android:textColor="@color/activity_background"/>
+            />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/containerHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tvSearchedHistory"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="42dp"
+                android:layout_marginBottom="20dp"
+                android:text="@string/searched"
+                style="@style/SearchErrorTextStyle"
+                android:textFontWeight="500"
+                />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerSearchHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:padding="0dp"
+            android:clipToPadding="false"
+            android:clipChildren="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="vertical"/>
+
+        <Button
+            android:id="@+id/clear_history_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SearchButtonStyle"
+            android:paddingVertical="14dp"
+            android:paddingHorizontal="10dp"
+            android:text="@string/clear_history"/>
 
 
     </LinearLayout>
@@ -173,6 +206,7 @@
         android:clipChildren="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"/>
+
 
 </LinearLayout>
 
