--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,8 +83,18 @@
         <item name="android:gravity">center</item>
     </style>
 
-    <style name="ReloadButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
-
+    <style name="SearchButtonStyle" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+        <item name="android:textColor">@color/activity_background</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textFontWeight">500</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:backgroundTint">@color/header_content_settings</item>
+        <item name="android:elevation">0dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
