--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -175,22 +175,26 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerSearchHistory"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:padding="0dp"
             android:clipToPadding="false"
             android:clipChildren="false"
+            android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"/>
 
         <Button
             android:id="@+id/clear_history_button"
+            style="@style/SearchButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/SearchButtonStyle"
-            android:paddingVertical="14dp"
+            android:layout_marginVertical="24dp"
+            android:minHeight="36dp"
             android:paddingHorizontal="10dp"
-            android:text="@string/clear_history"/>
+            android:paddingVertical="14dp"
+            android:text="@string/clear_history"
+            tools:ignore="TouchTargetSizeCheck" />
 
 
     </LinearLayout>
