--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,5 +96,13 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:textAllCaps">false</item>
     </style>
+    
+    <style name="AudioPlayerTextStyle">
+        <item name="android:textSize">13sp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textFontWeight">400</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#AEAFB4</item>
+    </style>
 
 </resources>
